apps/interactive-report/src/routes/ReportOverviewRoute/ReportOverviewRoute.css
.ReportOverviewRoute {
  padding: var(--space-l) var(--space-m);
  overflow-y: scroll;
}

@media (min-width: 768px) {
  .ReportOverviewRoute {
    padding: var(--space-xl) 0;
  }
}

@media (min-width: 768px) {
  .ReportOverviewRoute__ReportOverviewGrid {
    max-width: calc(8 * var(--space-3xl));
    margin-left: auto;
    margin-right: auto;
  }
}

.ReportOverviewRouteBasicInfo {
  display: none;
}

@media (min-width: 768px) {
  .ReportOverviewRouteBasicInfo {
    display: flex;
    position: absolute;
    left: var(--space-l);
    flex-direction: column;
    gap: var(--space-l);
  }
}

.ReportOverviewRouteBasicInfo__Item__Label {
  margin-bottom: var(--space-2xs);
}

.ReportOverviewRouteBasicInfo__Item__Value {
  font-size: var(--step-1);
}

